Actions
Bug #9378
closedrefer: this statement may fall through
Start date:
2018-03-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
issue found by gcc 7 build:
refer2.c:139:9: error: this statement may fall through [-Werror=implicit-fallthrough=] *++p = 0; ~~~~~^~~ refer2.c:140:3: note: here case 1: ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 0d7511a18ccdbeec76a22dca77ab35dd4f1fb685
commit 0d7511a18ccdbeec76a22dca77ab35dd4f1fb685 Author: Toomas Soome <tsoome@me.com> Date: 2018-04-06T19:44:27.000Z 9378 refer: this statement may fall through Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions